# diffstock-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  model_weights.safetensors
.cache/: SPY_5y.json
.github/workflows/: ci.yml
src/: app.rs  config.rs  data.rs  diffusion.rs  gui.rs  inference.rs  main.rs  train.rs  tui.rs  ui.rs
src/models/: time_grad.rs
