[package]
name = "diffstock-tui"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.93"
chrono = "0.4.38"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
candle-core = "0.8.0"
candle-nn = "0.8.0"
rand_distr = "0.4.3"
clap = { version = "4.5.53", features = ["derive"] }
safetensors = "0.7.0"
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
tracing = "0.1"
tracing-subscriber = "0.3"
